manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82021988
spec:
    ports:
    - port: 8080 
    selector:
        app: "82021988"
