manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82021988-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82021988.ce-aa.kubepia.net" # 호스트명 변경
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82021988
            port:
              number: 8080
        pathType: Prefix
